<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.administration</groupId>
	<artifactId>services</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>services</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>1.8</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<!--<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>-->
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>javax.xml</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.1</version>
		</dependency>

		<dependency>
			<groupId>net.sf.xmldb-org</groupId>
			<artifactId>xmldb-api</artifactId>
			<version>1.7.0</version>
		</dependency>
		<dependency>
			<groupId>org.exist-db</groupId>
			<artifactId>exist-core</artifactId>
			<version>5.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>apache-jena-libs</artifactId>
			<type>pom</type>
			<version>3.16.0</version>
		</dependency>
		<dependency>
			<groupId>xalan</groupId>
			<artifactId>xalan</artifactId>
			<version>2.7.1</version>
		</dependency>
				<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.4</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jaxb2-maven-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>xjc</id>
						<goals>
							<goal>xjc</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<xjbSources>
						<xjbSource>src/main/resources/global.xjb</xjbSource>
					</xjbSources>
					<sources>
						<source>src\main\resources\schemas\tipovi.xsd</source>
						<source>src\main\resources\schemas\obavestenjecir.xsd</source>
						<source>src\main\resources\schemas\resenje.xsd</source>
						<source>src\main\resources\schemas\zahtevcir.xsd</source>
						<source>src\main\resources\schemas\zalbacutanjecir.xsd</source>
						<source>src\main\resources\schemas\zalbanaodlukucir.xsd</source>
						<source>src\main\resources\schemas\korisnik.xsd</source>
					</sources>
					<packageName>com.administration.services.model</packageName>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.glassfish.jaxb</groupId>
						<artifactId>jaxb-xjc</artifactId>
						<version>2.3.2</version>
					</dependency>
					<dependency>
						<groupId>com.sun.activation</groupId>
						<artifactId>jakarta.activation</artifactId>
						<version>1.2.1</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

</project>
